--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-carousel": "^4.3.0",
+    "react-dom": "^18.2.0",
+    "react-styled-carousel": "^0.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
